styles/header.css
.header {
  display: flex;
  flex-direction: column;
  margin-bottom: 5rem;
}

.header__container {
  display: flex;
  flex-direction: row;
  margin: 1.5rem auto;
}

.header__logo {
  position: absolute;
  top: 1rem;
  left: 1rem;
  width: 3.5rem; height: 3.5rem;
}

.header__title {
  font-family: 'lora';
  font-size: 1.9rem;
  font-weight: 800;
  color: var(--clr-gray-600);
}

.navbar-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 4rem;
}

.navbar-container__inner__list {
  display: flex;
  gap: 0.5rem;
}

.navbar-container__inner__list li {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 4rem;
  width: 10rem;
  font-family: 'roboto condensed';
  font-size: 1.2rem;
  font-weight: 400;
  list-style: none;
  color: var(--clr-gray-600);
  cursor: pointer;
  border-bottom: 0.3rem solid transparent;
  transition: all 0.3s;
}

.navbar-container__inner__list li:hover {
  font-weight: 600;
  border-bottom: 0.2rem solid rgba(0, 0, 0, 0.5);
  background-color: var(--clr-blue-gray-50);
}

